  the setting already used by eZ Publish: content.ini [RelationGroupSettings]ImagesClassList[]
  Note: You need to change your settings as a result from this
* added file button, and use 1 tempalte pr content type in upload and realated dialog.
  Note: New i18n strings in upload_* and tag_embed_* templates!
* updated to TinyMCE 3.2.1
* Misc i18n bugs fixed in pol-PL and nor-NO


5.0rc7
* Changed javascript / stylesheet cache to use 'public/' path
  NOTE: Rewrite rules changed, see INSTALL for the new rewrite rule
* Added Italian translation contributed by Sandra Parente
* Added setting to give validation warning if embed objects is in trash
  for issue #13391: ezoe handles removed images incorrect
* Added support for paste plugin dialogs (buttons: paste from word and text)
* Do not convert u tag to custom:underline tag if underline custom tag isn't enabled
  To make sure only tag is removed and not content of the tag as well.
* Fixed #13694: Change td to th for "row" doesn't work with Firefox
* Fixed #13692: Checkboxes and radio buttons have a border with IE7
* Additional fixes for #013505: Anchor in links are lost
* Moved custom attribute settings to ezoe_customattributes.ini from content.ini
* Misc WAI and usability improvments to the dialogs reported by customers
  NOTE: This introduced several new strings, see .ts files for type="unfinished"


5.0rc6
* Fixed #13548: Javascript error, when embedding video objects with empty ezimage attribute
* Regression #13486: Can't change properties of OL, LI or UL
* Fixed #13599: Header removed from custom tags
* updated to TinyMCE 3.2 and enabled (ez)inlinepopup by default


5.0rc5
* Fixed ezoescript and ezoecss to load files in correct order when arrays are used
* EditorDialogCSSFileList should prepend 'stylesheets/' folder automatically like
  other css ini settings.
* Fixed #013505: Anchor in links are lost
* Updated TinyMCE to 3.1.1
* Added support for setting image alt text when uploading image