@@ -89,6 +89,8 @@ Buttons[]=pagebreak
 # Needs the nonbreaking plugin enabled and probably also AllowMultipleSpaces set to true in ezxml.ini
 #Buttons[]=nonbreaking
 Buttons[]=|
+# SplitButton that puts all table related buttons inside a sub menu. 
+#Buttons[]=tablemenu
 Buttons[]=table
 Buttons[]=delete_table
 Buttons[]=delete_col
