@@ -9,6 +9,7 @@ eZ Online Editor 5.0 extension Changelog
   Note: New i18n strings in upload_* and tag_embed_* templates!
 * updated to TinyMCE 3.2.1
 * Misc i18n bugs fixed in pol-PL and nor-NO
+* Added tablemenu, a splitbutton that puts all table commands into a sub menu to save menu space.
 
 
 5.0rc7
